--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                               <h1 class="page-users__title typo-h1_big deco-typo "><span class="user"><span class="user__info"><span class="user__name user__name-line-height" title="Саша">Саша</span></span></span></h1>
                            </div>
                            <div class="d-generic-page-head__main-bottom">
-                              <div class="d-generic-page-head__main-actions"><a href="first task/firstTask.html"><button class="d-button deco-button deco-button-action local-icon-theme-white d-button_rounded d-button_size_L d-button_w-icon d-button_w-icon-left page-users__shuffle-button" data-b="965" type="button"><span class="d-button-inner deco-button-stylable"><span class="d-button__inner"><span class="d-icon deco-icon d-icon_play-small  "></span><span class="d-button__label">Пройти тест</span></span></span></button></a></div>
+                              <div class="d-generic-page-head__main-actions"><a href="intro/intro.html"><button class="d-button deco-button deco-button-action local-icon-theme-white d-button_rounded d-button_size_L d-button_w-icon d-button_w-icon-left page-users__shuffle-button" data-b="965" type="button"><span class="d-button-inner deco-button-stylable"><span class="d-button__inner"><span class="d-icon deco-icon d-icon_play-small  "></span><span class="d-button__label">Пройти тест</span></span></span></button></a></div>
                            </div>
                         </div>
                      </div>
