--- a/seventh task/seventhTask.html
+++ b/seventh task/seventhTask.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="fourthTask.css">
+    <link rel="stylesheet" href="sixthTask.css">
 </head>
 <body>
 <div class="card offset-md-3 col-md-6 vertical col-12">
     <div class="card-header">
         <h2 class="card-title">
-            <strong>Вопрос 5.</strong>
-            Что за песня была развернута?
+            <strong>Вопрос 7.</strong>
         </h2>
     </div>
     <div class="card-body">
-        ПРЕДУПРЕЖДЕНИЕ О ГРОМКИХ КРИКАХ
-        (если что, тут должно быть уже сразу все понятно, но прикрепил весь файл, потому что мне неиронично понравилось, что получилось в некоторых местах)
-        <br>
-        <audio src="audiomass-output.mp3" controls></audio>
+        <p>Ну и напоследок самое сложное. Напиши фамилию автора этого шедевра</p>
         <div class="form-group">
             <input type="text" id="answer" class="form-control" placeholder="Ответ"><br>
             <button class="btn btn-primary" id="send">Ответить</button>
@@ -26,7 +22,7 @@
     </div>
 </div>
 
-<script src="fourthTask.js"></script>
+<script src="sixthTask.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
