--- a/sixth task/sixthTask.html
+++ b/sixth task/sixthTask.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="sixthTask.css">
+    <link rel="stylesheet" href="fifthTask.css">
 </head>
 <body>
 <div class="card offset-md-3 col-md-6 vertical col-12">
@@ -14,7 +14,17 @@
         </h2>
     </div>
     <div class="card-body">
-        <p>Ну и напоследок самое сложное. Напиши фамилию автора этого шедевра</p>
+        <p>Некоторая небезызвестная песня была забита в Яндекс.Переводчик и переведена на язык Эмодзи. Что это была за песня?</p>
+        <p>Также абсолютно случайно произошло усложнение задачи: один смайлик (на месте знака вопроса) не обрабатывается на винде, так что ты обойдешься без него :)</p>
+        <p>⚫️❔ 🎨 ⛅<br>
+        😆, 👇 💌 ❗ 😆, 👇 💌 ❗<br>
+        👆 💬 👤 👈 ⚫️ [?] <br>
+        😆, 👇 💌 ❗ 😆, 👇 💌 ❗<br>
+        🌐❔ 🔜 👤 🚮 👇 👞<br>
+        😆, 👇 💌 ❗ 😆, 👇 💌 ❗<br>
+        👆 💬 🚮 👫 🔛 👆 👳<br>
+        😆, 👇 💌 ❗ 😆, 👇 💌 ❗</p>
+
         <div class="form-group">
             <input type="text" id="answer" class="form-control" placeholder="Ответ"><br>
             <button class="btn btn-primary" id="send">Ответить</button>
@@ -22,7 +32,7 @@
     </div>
 </div>
 
-<script src="sixthTask.js"></script>
+<script src="fifthTask.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
