--- a/seventh task/seventhTask.html
+++ b/seventh task/seventhTask.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="sevenTask.css">
+    <link rel="stylesheet" href="seventhTask.css">
 </head>
 <body>
 <div class="card offset-md-3 col-md-6 vertical col-12">
